--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -96,6 +96,9 @@
 
 
     <!--Virkailija layout script -->
+
+    <script type="text/javascript" src="../test/angular-mocks.js"></script>
+    <script type="text/javascript" src="../test/e2e-mocks.js"></script>
     <script type="text/javascript" src="/virkailija-raamit/apply-raamit.js"></script>
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
