--- a/src/main/webapp/app/valintaryhma/valintaryhmaKopiointi.html
+++ b/src/main/webapp/app/valintaryhma/valintaryhmaKopiointi.html
@@ -23,8 +23,12 @@
     </form>
 </div>
 <div class="modal-footer">
-    <button class="btn btn-sm btn-default" ng-click="cancel()">{{ t('valintaperusteet.sulje') || 'Sulje'}}</button>
-    <button ng-click="kopioiValintaryhma()" ng-disabled="valintaryhmaKopio.$invalid" class="btn btn-sm btn-primary">
+    <button class="btn btn-sm btn-default" ng-click="cancel()" ng-hide="working">{{ t('valintaperusteet.sulje') || 'Sulje'}}</button>
+    <button ng-click="kopioiValintaryhma()" ng-disabled="valintaryhmaKopio.$invalid" class="btn btn-sm btn-primary" ng-hide="working">
         {{t('valintaperusteet.kopioi') || 'Kopioi'}}
     </button>
+    <button ng-disabled="true" class="btn btn-sm btn-primary" ng-show="working">
+        <i class="fa fa-cog fa-spin"></i>  {{ t('ilmoitus.kasitellaan') || 'Käsitellään' }}
+    </button>
+
 </div>
