--- a/src/main/webapp/app/valintaryhmalistaus/valintaryhmatlistaus.html
+++ b/src/main/webapp/app/valintaryhmalistaus/valintaryhmatlistaus.html
@@ -51,7 +51,9 @@
 
             </div>
 
-            <div ng-include="'haku/haku.html'"></div>
+            <div class="form" ng-controller="HakuController">
+                <div ng-include="'haku/haku.html'"></div>
+            </div>
             <div class="form-group">
                 <label for="searchtext">{{ t('valintaryhmatlistaus.suodatahakukohteita') || 'Suodata hakukohteita'
                     }}</label>
