--- a/src/main/webapp/app/valintaryhma/valintaryhmalomake.html
+++ b/src/main/webapp/app/valintaryhma/valintaryhmalomake.html
@@ -167,6 +167,17 @@
     </div>
 </div>
 
+<div class="form-group">
+    <label class="control-label col-md-2" for="">{{ t('valintaryhmalomake.vastuuorganisaatio') || 'Vastuuorganisaatio' }}</label>
+    <div class="col-md-6">
+        <select class="form-control"
+                ng-model="model.valintaryhma.vastuuorganisaatio"
+                ng-options="o.oid as (o.nimi.fi || o.nimi.sv || o.nimi.en) for o in model.valintaryhma.organisaatiot">
+            <option value=""></option>
+        </select>
+    </div>
+</div>
+
 <!-- VALINTAKOEKOODIEN LISTAUS -->
 <div ng-include="'valintaryhma/valintakoekoodit.html'"></div>
 
