--- a/src/main/webapp/app/valintaryhma/valintaryhmalomake_uusi.html
+++ b/src/main/webapp/app/valintaryhma/valintaryhmalomake_uusi.html
@@ -101,6 +101,17 @@
         </div>
 
         <div class="form-group">
+            <label class="control-label col-md-2" for="">{{ t('valintaryhmalomakeuusi.vastuuorganisaatio') || 'Vastuuorganisaatio' }}</label>
+            <div class="col-md-6">
+                <select class="form-control"
+                        ng-model="model.valintaryhma.vastuuorganisaatio"
+                        ng-options="o.oid as (o.nimi.fi || o.nimi.sv || o.nimi.en) for o in model.valintaryhma.organisaatiot">
+                    <option value=""></option>
+                </select>
+            </div>
+        </div>
+
+        <div class="form-group">
             <div class="col-md-2">
                 <div class="pull-right">
                 <button type="button" class="btn btn-sm btn-default" ng-click="cancel()" popover-popup-delay="500"
