--- a/src/main/webapp/app/valintaryhma/valintaryhmalomake_uusi.html
+++ b/src/main/webapp/app/valintaryhma/valintaryhmalomake_uusi.html
@@ -104,7 +104,7 @@
             <label class="control-label col-md-2" for="">{{ t('valintaryhmalomakeuusi.vastuuorganisaatio') || 'Vastuuorganisaatio' }}</label>
             <div class="col-md-6">
                 <select class="form-control"
-                        ng-model="model.valintaryhma.vastuuorganisaatio"
+                        ng-model="model.valintaryhma.vastuuorganisaatioOid"
                         ng-options="o.oid as (o.nimi.fi || o.nimi.sv || o.nimi.en) for o in model.valintaryhma.organisaatiot">
                     <option value=""></option>
                 </select>
