Added vastuuorganisaatio check for starting the valintalaskenta.
Hide valintaryhmas which user can not access

Added last valinta-ajo date to UI

Added expiration date to valintalaskenta UI

Added expiration date description to UI

Expiration date moved to end of day.
Only valintaryhmas without childs can be started.

--- a/src/main/webapp/app/valintaryhma/valintaryhmalomake.html
+++ b/src/main/webapp/app/valintaryhma/valintaryhmalomake.html
@@ -130,6 +130,25 @@
 </div>
 
 <div class="form-group">
+    <label class="control-label col-md-2" for="viimeinenKaynnistyspaiva">{{ t('valintaryhmalomake.viimeinenKaynnistyspaiva') || 'Viimeinen käynnistyspäivä'
+        }}</label>
+
+    <div class="col-md-4">
+        <input class="form-control"
+               auth ng-disabled="!userAccess.updateOrg"
+               id="viimeinenKaynnistyspaiva"
+               placeholder="{{ t('valintaryhmalomake.viimeinenKaynnistyspaiva') || 'pvm' }}"
+               ng-model="model.valintaryhma.viimeinenKaynnistyspaiva"
+               datepicker-popup="dd.MM.yyyy"
+               is-open="viimeinenKaynnistyspaiva_open"
+               ng-click = "viimeinenKaynnistyspaiva_open = true"
+               show-button-bar="false"
+        />
+    </div>
+
+</div>
+
+<div class="form-group">
     <label class="control-label col-md-2">{{ t('valintaryhmalomake.organisaatiot') || 'Organisaatiot' }}:</label>
 
     <div class="col-md-10">
@@ -171,6 +190,7 @@
     <label class="control-label col-md-2" for="">{{ t('valintaryhmalomake.vastuuorganisaatio') || 'Vastuuorganisaatio' }}</label>
     <div class="col-md-6">
         <select class="form-control"
+                auth ng-disabled="!userAccess.updateOrg"
                 ng-model="model.valintaryhma.vastuuorganisaatioOid"
                 ng-options="o.oid as (o.nimi.fi || o.nimi.sv || o.nimi.en) for o in model.valintaryhma.organisaatiot">
             <option value=""></option>
