--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -35,6 +35,7 @@
     <script type="text/javascript" src="valintaryhma/valintaryhmaKopiointi.js"></script>
     <script type="text/javascript" src="laskentakaavat/laskentakaavaModel.js"></script>
     <script type="text/javascript" src="hakijaryhma/hakijaryhma.js"></script>
+    <script type="text/javascript" src="hakijaryhma/hakijaryhmatyyppikoodit.js"></script>
     <script type="text/javascript" src="hakukohde/hakukohde.js"></script>
     <script type="text/javascript" src="hakukohde/hakukohde_uusi.js"></script>
     <script type="text/javascript" src="valinnanvaihe/hakukohdevalinnanvaihe.js"></script>
@@ -74,6 +75,7 @@
     <script type="text/javascript" src="laskentakaavat/laskentakaavaeditori/utilities/laskentakaavamodalservice.js"></script>
     <script type="text/javascript" src="laskentakaavat/laskentakaavaeditori/kaariminen/funktiokutsukaareservice.js"></script>
     <script type="text/javascript" src="laskentakaavat/laskentakaavaeditori/utilities/funktiokuvausservice.js"></script>
+    <script type="text/javascript" src="laskentakaavat/laskentakaavaeditori/utilities/syotettavanarvontyyppiService.js"></script>
     <script type="text/javascript" src="laskentakaavat/listaus/hakukohdelaskentakaavalista.js"></script>
     <script type="text/javascript" src="laskentakaavat/listaus/kaavakopiointi.js"></script>
 
