--- a/src/main/webapp/app/hakijaryhma/hakijaryhma.html
+++ b/src/main/webapp/app/hakijaryhma/hakijaryhma.html
@@ -117,7 +117,8 @@
         </div>
     </div>
 
-
+    <!-- HAKIJARYHMATYYPPIKOODIEN LISTAUS -->
+    <div ng-show="model.hakijaryhma.oid" ng-include="'hakijaryhma/hakijaryhmatyyppikoodit.html'"></div>
 
 
     <div class="form-group">
