Add hakijaryhmatyyppikoodit also for hakukohde & valintapajono hakijaryhma

--- a/src/main/webapp/app/hakijaryhma/hakijaryhma.html
+++ b/src/main/webapp/app/hakijaryhma/hakijaryhma.html
@@ -263,6 +263,9 @@
         </div>
     </div>
 
+    <!-- HAKIJARYHMATYYPPIKOODIEN LISTAUS -->
+    <div ng-show="model.hakijaryhma.oid" ng-include="'hakijaryhma/hakijaryhmatyyppikoodit.html'"></div>
+
 </div>
 
 <div class="form-group">
