Add Hakijaryhmatyyppikoodi for HakijaryhmaValintatapajono

--- a/src/main/webapp/app/hakijaryhma/hakijaryhmatyyppikoodit.html
+++ b/src/main/webapp/app/hakijaryhma/hakijaryhmatyyppikoodit.html
@@ -34,7 +34,7 @@
                     <td>{{model.hakijaryhma.hakijaryhmatyyppikoodi.arvo}}</td>
                     <td>{{model.hakijaryhma.hakijaryhmatyyppikoodi.nimiFi}}</td>
                     <td>
-                        <button class="btn btn-sm btn-default" auth ng-disabled="!userAccess.updateOrg" ng-click="removeHakijaryhmatyyppikoodi(model.hakijaryhma.hakijaryhmatyyppikoodi)">
+                        <button class="btn btn-sm btn-default" auth ng-disabled="!userAccess.updateOrg" ng-click="removeHakijaryhmatyyppikoodi()">
                             <i class="fa fa-trash-o"></i>
                         </button>
                     </td>
