Save hakijaryhmatyyppikoodi as part of HakijaryhmaValintatapajono
and make it required field (default to muu)

--- a/src/main/webapp/app/hakijaryhma/hakijaryhma.html
+++ b/src/main/webapp/app/hakijaryhma/hakijaryhma.html
@@ -118,7 +118,7 @@
     </div>
 
     <!-- HAKIJARYHMATYYPPIKOODIEN LISTAUS -->
-    <div ng-show="model.hakijaryhma.oid" ng-include="'hakijaryhma/hakijaryhmatyyppikoodit.html'"></div>
+    <div ng-include="'hakijaryhma/hakijaryhmatyyppikoodit.html'"></div>
 
 
     <div class="form-group">
@@ -264,7 +264,7 @@
     </div>
 
     <!-- HAKIJARYHMATYYPPIKOODIEN LISTAUS -->
-    <div ng-show="model.hakijaryhma.oid" ng-include="'hakijaryhma/hakijaryhmatyyppikoodit.html'"></div>
+    <div ng-include="'hakijaryhma/hakijaryhmatyyppikoodit.html'"></div>
 
 </div>
 
