--- a/src/main/webapp/app/hakijaryhma/hakijaryhmatyyppikoodit.html
+++ b/src/main/webapp/app/hakijaryhma/hakijaryhmatyyppikoodit.html
@@ -1,5 +1,5 @@
 <div class="form-group">
-    <label class="col-md-2 control-label">{{ t('hakijaryhmatyyppikoodi.label') || 'Hakijaryhmatyyppikoodi' }}</label>
+    <label class="col-md-2 control-label">{{ t('hakijaryhmatyyppikoodi.label') || 'Hakijaryhmän tyyppi' }}</label>
 
     <div class="col-md-10">
         <span class="radio-inline" ng-repeat="tyyppi in model.hakijaryhmatyyppikoodit">
