BUG-1168: Valintakokeen poistonapin tilalle teksti jos koe on periytynyt

--- a/src/main/webapp/app/valinnanvaihe/valintakoevalinnanvaihelomake.html
+++ b/src/main/webapp/app/valinnanvaihe/valintakoevalinnanvaihelomake.html
@@ -56,10 +56,15 @@
                         <td><a ng-click="modifyvalintakoe(valintakoe.oid)">{{valintakoe.nimi}}</a></td>
                         <td>{{valintakoe.kuvaus}}</td>
                         <td>
-                            <button auth ng-disabled="!userAccess.updateOrg || valintakoe.peritty" class="btn btn-default btn-sm"
-                                    ng-click="model.removeValintakoe(valintakoe)">
-                                <i class="fa fa-trash-o organisaatio"></i>
-                            </button>
+                            <div ng-if="!valintakoe.peritty">
+                                <button auth ng-disabled="!userAccess.updateOrg" class="btn btn-default btn-sm"
+                                        ng-click="model.removeValintakoe(valintakoe)">
+                                    <i class="fa fa-trash-o organisaatio"></i>
+                                </button>
+                            </div>
+                            <div ng-if="valintakoe.peritty">
+                                {{ t('valintakoevalinnanvaihelomake.eivoipoistaa_periytynyt') || 'Et voi poistaa valintakoetta, koska se on periytynyt' }}
+                            </div>
                         </td>
                     </tr>
                     </tbody>
