Add facilities for url properties and prepare conversion

--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -17,10 +17,15 @@
     <script type="text/javascript" src="../common/jslib/static/jquery.nestable.js"></script>
     <script type="text/javascript" src="../common/jslib/static/jquery.mjs.nestedSortable.js"></script>
     <script type="text/javascript" src="../common/jslib/ui-bootstrap-tpls.min.js"></script>
+    <script type="text/javascript" src="../common/jslib/oph_urls/index.js"></script>
     <script src="//cdn.polyfill.io/v1/polyfill.min.js"></script>
+
 
     <!--conf -->
     <script type="text/javascript"  src="../configuration/configuration.js"></script>
+    <script type="text/javascript"  src="valintalaskenta-ui-web-url_properties.js"></script>
+    <script type="text/javascript" src="/valintaperusteet-ui/configuration/frontProperties.js"></script>
+
 
     <!-- app js-->
     <script type="text/javascript" src="valintaperusteet.js"></script>
